--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <nav>
-        <a href="">Home</a>
-        <a href="login">Login</a>
+        <a href={{ path('home') }}>Home</a>
+        <a href={{ path('login') }}>Login</a>
     </nav>
 
     <h1>
@@ -11,6 +11,10 @@
     </h1>
 
     <p>Les derniers articles !</p>
+
+    {% for post in posts%}
+        <h2>{{ post.title }}</h2>
+    {% endfor %}
 
 
 {% endblock %}
