--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -17,4 +17,6 @@
 
         <button type="submit">login</button>
     </form>
+
+    <p>No account ? <a href="{{ path('register') }}">Register !</a></p>
 {% endblock %}
