--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     {% embed 'header.html.twig' %}
         {% block logged_user_actions %}
-            <a href="{{ path('publish') }}">Publish</a>
+            <a href="{{ path('publish_post') }}">Publish</a>
         {% endblock %}
     {% endembed %}
 
